3986
To reproduce without SBT / Maven:
```scala
 ~/code/scratch/class-compiler-problem: scalac src/main/scala/uk/ac/liv/oforero/MyJavaClass.java src/main/scala/uk/ac/liv/oforero/ClassProblem.scala 
src/main/scala/uk/ac/liv/oforero/ClassProblem.scala:26: error: type mismatch;
 found   : java.lang.Class[uk.ac.liv.oforero.MyScalaClass](classOf[uk.ac.liv.oforero.MyScalaClass])
 required: java.lang.Class
  override def getBeanClass(element: Object) = classOf[MyScalaClass]
                                                      ^
one error found

 ~/code/scratch/class-compiler-problem: scala -version
Scala code runner version 2.8.0.r21821-b20100506020142 -- Copyright 2002-2010, LAMP/EPFL
```
